// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleRevisionRecordList is rendered correctly to match the snapshot when the length of the log is 0 1`] = `
<ThemeProvider
  theme={
    Object {
      "color": Object {
        "articleShareButtons": Object {
          "buttonWrapperDiv": Object {
            "shadow": "hsla(212, 72%, 75%)",
          },
        },
        "blogTitle": Object {
          "logoWrapperAnchor": Object {
            "textOnHover": "hsla(148, 72%, 75%)",
          },
        },
        "bodyHeader": Object {
          "titleAnchor": Object {
            "shadow": "hsla(148, 72%, 85%)",
          },
        },
        "categoryTag": Object {
          "anchor": Object {
            "bg": "hsla(212, 72%, 45%)",
            "bgOnHover": "hsla(212, 72%, 55%)",
            "shadow": "hsla(212, 72%, 75%)",
            "text": "white",
          },
        },
        "common": Object {
          "border": Object {
            "primary": "hsla(0, 0%, 50%)",
            "primaryLight": "hsla(0, 0%, 75%)",
          },
          "text": Object {
            "accent": "hsla(148, 72%, 45%)",
            "primary": "hsla(0, 0%, 15%)",
            "primaryLight": "hsla(0, 0%, 40%)",
            "secondary": "hsla(212, 72%, 35%)",
          },
        },
        "dateTime": Object {
          "isoDateTime": Object {
            "text": "hsla(212, 72%, 35%)",
          },
        },
        "global": Object {
          "body": Object {
            "bg": "hsla(60, 72%, 55%)",
          },
          "table": Object {
            "tr": Object {
              "bg2n": "hsla(148, 72%, 85%)",
            },
          },
        },
        "markdownRenderer": Object {
          "convertedMdBody": Object {
            "blockquote": Object {
              "border": "hsla(212, 72%, 85%)",
            },
          },
        },
        "siteHeader": Object {
          "header": Object {
            "bg": "hsla(148, 72%, 25%)",
            "shadow": "hsla(148, 72%, 15%)",
          },
          "innerWrapperFlexContainerDiv": Object {
            "shadow": "hsla(148, 72%, 15%)",
          },
        },
        "socialLinkWithIcon": Object {
          "socialLinkAnchor": Object {
            "textOnHover": "hsla(60, 72%, 55%)",
          },
        },
      },
    }
  }
>
  <ArticleRevisionRecordList
    log={Array []}
  />
</ThemeProvider>
`;

exports[`ArticleRevisionRecordList is rendered correctly to match the snapshot when the length of the log is 1 or more 1`] = `
.emotion-2 {
  margin-bottom: 0.75rem;
  font-weight: 600;
  cursor: pointer;
  outline: none;
}

.emotion-4 {
  padding-left: 0;
  margin: 0;
}

.emotion-6 {
  margin-bottom: 0.75rem;
  list-style: none;
}

.emotion-10 {
  font-weight: bolder;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "articleShareButtons": Object {
          "buttonWrapperDiv": Object {
            "shadow": "hsla(212, 72%, 75%)",
          },
        },
        "blogTitle": Object {
          "logoWrapperAnchor": Object {
            "textOnHover": "hsla(148, 72%, 75%)",
          },
        },
        "bodyHeader": Object {
          "titleAnchor": Object {
            "shadow": "hsla(148, 72%, 85%)",
          },
        },
        "categoryTag": Object {
          "anchor": Object {
            "bg": "hsla(212, 72%, 45%)",
            "bgOnHover": "hsla(212, 72%, 55%)",
            "shadow": "hsla(212, 72%, 75%)",
            "text": "white",
          },
        },
        "common": Object {
          "border": Object {
            "primary": "hsla(0, 0%, 50%)",
            "primaryLight": "hsla(0, 0%, 75%)",
          },
          "text": Object {
            "accent": "hsla(148, 72%, 45%)",
            "primary": "hsla(0, 0%, 15%)",
            "primaryLight": "hsla(0, 0%, 40%)",
            "secondary": "hsla(212, 72%, 35%)",
          },
        },
        "dateTime": Object {
          "isoDateTime": Object {
            "text": "hsla(212, 72%, 35%)",
          },
        },
        "global": Object {
          "body": Object {
            "bg": "hsla(60, 72%, 55%)",
          },
          "table": Object {
            "tr": Object {
              "bg2n": "hsla(148, 72%, 85%)",
            },
          },
        },
        "markdownRenderer": Object {
          "convertedMdBody": Object {
            "blockquote": Object {
              "border": "hsla(212, 72%, 85%)",
            },
          },
        },
        "siteHeader": Object {
          "header": Object {
            "bg": "hsla(148, 72%, 25%)",
            "shadow": "hsla(148, 72%, 15%)",
          },
          "innerWrapperFlexContainerDiv": Object {
            "shadow": "hsla(148, 72%, 15%)",
          },
        },
        "socialLinkWithIcon": Object {
          "socialLinkAnchor": Object {
            "textOnHover": "hsla(60, 72%, 55%)",
          },
        },
      },
    }
  }
>
  <ArticleRevisionRecordList
    log={
      Array [
        Object {
          "author": "8ayac",
          "date": "2021-01-01T11:11:11.000Z",
          "description": ":test_prefix: this is a test commit 1-1",
          "id": "1000001",
        },
        Object {
          "author": "8ayac",
          "date": "2021-01-01T22:22:22.000Z",
          "description": ":test_prefix: this is a test commit 1-2",
          "id": "1000002",
        },
      ]
    }
  >
    <Details
      open={true}
    >
      <details
        className="emotion-0 emotion-1"
        open={true}
      >
        <Summary>
          <summary
            className="emotion-2 emotion-3"
          >
            Revision History
          </summary>
        </Summary>
        <LogList
          log={
            Array [
              Object {
                "author": "8ayac",
                "date": "2021-01-01T11:11:11.000Z",
                "description": ":test_prefix: this is a test commit 1-1",
                "id": "1000001",
              },
              Object {
                "author": "8ayac",
                "date": "2021-01-01T22:22:22.000Z",
                "description": ":test_prefix: this is a test commit 1-2",
                "id": "1000002",
              },
            ]
          }
        >
          <LogList>
            <ul
              className="emotion-4 emotion-5"
            >
              <LogListItem
                key="1000001"
              >
                <li
                  className="emotion-6 emotion-7"
                >
                  <UpdateDateTime>
                    <time
                      className="emotion-8 emotion-9"
                    >
                      2021-01-01T11:11:11.000Z
                    </time>
                  </UpdateDateTime>
                   
                  <UpdateDescriptionSpan>
                    <span
                      className="emotion-10 emotion-11"
                    >
                      this is a test commit 1-1
                    </span>
                  </UpdateDescriptionSpan>
                   
                  (
                  <ToGitHubCommitAnchor
                    href="https://github.com/8ayac/blog.8ay.ac/commit/1000001"
                    rel="noopener"
                    target="_blank"
                  >
                    <a
                      className="emotion-12 emotion-13"
                      href="https://github.com/8ayac/blog.8ay.ac/commit/1000001"
                      rel="noopener"
                      target="_blank"
                    >
                      #
                      1000001
                    </a>
                  </ToGitHubCommitAnchor>
                   
                  by 
                  8ayac
                  )
                </li>
              </LogListItem>
              <LogListItem
                key="1000002"
              >
                <li
                  className="emotion-6 emotion-7"
                >
                  <UpdateDateTime>
                    <time
                      className="emotion-8 emotion-9"
                    >
                      2021-01-01T22:22:22.000Z
                    </time>
                  </UpdateDateTime>
                   
                  <UpdateDescriptionSpan>
                    <span
                      className="emotion-10 emotion-11"
                    >
                      this is a test commit 1-2
                    </span>
                  </UpdateDescriptionSpan>
                   
                  (
                  <ToGitHubCommitAnchor
                    href="https://github.com/8ayac/blog.8ay.ac/commit/1000002"
                    rel="noopener"
                    target="_blank"
                  >
                    <a
                      className="emotion-12 emotion-13"
                      href="https://github.com/8ayac/blog.8ay.ac/commit/1000002"
                      rel="noopener"
                      target="_blank"
                    >
                      #
                      1000002
                    </a>
                  </ToGitHubCommitAnchor>
                   
                  by 
                  8ayac
                  )
                </li>
              </LogListItem>
            </ul>
          </LogList>
        </LogList>
      </details>
    </Details>
  </ArticleRevisionRecordList>
</ThemeProvider>
`;
